# doc2md

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
doc2md/: __init__.py  cli.py  converters.py  merger.py  pipeline.py  scanner.py
